# mobilenet-ncnn

./: CMakeLists.txt  README.md  export.py  onnx2ncnn.sh  torch2onnx.sh
checkpoints/: mobilenet_v2-opt.param
src/: main.cpp
